(library
 (public_name cuz)
 (name cuz)
 (modules :standard \ cuz_unix cuz_lwt)
 (libraries cohttp-lwt decompress.gz)
 (preprocess future_syntax))

(library
 (public_name cuz.unix)
 (name cuz_unix)
 (modules cuz_unix)
 (libraries decompress.gz unix)
 (preprocess future_syntax))

(library
 (public_name cuz.lwt)
 (name cuz_lwt)
 (modules cuz_lwt)
 (libraries cohttp-lwt cuz)
 (preprocess future_syntax))
