(library
 (public_name cuz)
 (name cuz)
 (modules :standard \ cuz_cfg cuz_cohttp)
 (libraries bigstringaf decompress.gz decompress.de)
 (preprocess future_syntax))

(library
 (public_name cuz.cfg)
 (name cuz_cfg)
 (modules cuz_cfg)
 (libraries decompress.gz ptime.clock.os))

(library
 (public_name cuz.cohttp)
 (name cuz_cohttp)
 (modules cuz_cohttp)
 (libraries cohttp-lwt cuz lwt)
 (preprocess future_syntax))
