(library
 (public_name clz)
 (name clz)
 (modules :standard \ clz_cfg clz_cohttp)
 (libraries bigstringaf decompress.gz decompress.de)
 (preprocess future_syntax))

(library
 (public_name clz.cfg)
 (name clz_cfg)
 (modules clz_cfg)
 (libraries decompress.gz ptime.clock.os))

(library
 (public_name clz.cohttp)
 (name clz_cohttp)
 (modules clz_cohttp)
 (libraries cohttp-lwt clz lwt)
 (preprocess future_syntax))
